--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,13 @@ crate-type = ["lib", "cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-stereokit-rust = { path = "../stereokit-rust" , features = ["build-dynamic-openxr", "no-event-loop"] } # , features = ["dynamic-openxr"] }
-#winit = { version = "0.30", features = [ "android-native-activity" ] }
+stereokit-rust = { path = "../stereokit-rust" , features = ["build-dynamic-openxr"] } # , features = ["dynamic-openxr"] }
+winit = { version = "0.30", features = [ "android-native-activity" ] }
 
 [target.'cfg(target_os = "android")'.dependencies]
 log = "0.4"
 android_logger = "0.14"
-android-activity = { version = "0.6", features = [ "native-activity" ] }
+#android-activity = { version = "0.6", features = [ "native-activity" ] }
 ndk-context = "0.1.1"
 ndk = "0.9.0"
 
