--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ android.compileSdkVersion=33
 android.targetSdkVersion=33
 android.minSdkVersion=29
 
-android.ndksDirectory=/home/mv/android/ndk/
-android.ndkVersion=27.0.12077973
+#--should be the same version than the one used in env variable ANDROID_NDK_ROOT
+android.ndkVersion=25.2.9519653
 
 # Application properties
 # cargo.openxr=use-that-of-the-device
