--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["lib", "cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-stereokit-rust = { path = "../stereokit-rust" , features = ["build-dynamic-openxr", "no-event-loop"] } # , features = ["dynamic-openxr"] }
+stereokit-rust = { path = "../StereoKit-rust" , features = ["build-dynamic-openxr", "no-event-loop"] } # , features = ["dynamic-openxr"] }
 #winit = { version = "0.30", features = [ "android-native-activity" ] }
 
 [target.'cfg(target_os = "android")'.dependencies]
