--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["lib", "cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop","build-dynamic-openxr", "force-local-deps"] }
+stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop"] } #,"build-dynamic-openxr", "force-local-deps"] }
 winit = { version = "0.30", features = [ "android-native-activity" ] }
 
 [target.'cfg(target_os = "android")'.dependencies]
@@ -34,9 +34,12 @@ runtime_libs = "./target/runtime_libs"   #---the way to build and add Khronos li
 
 [package.metadata.android.sdk]
 min_sdk_version = 29
-target_sdk_version = 29
+target_sdk_version = 32
 max_sdk_version = 32
 
+# [package.metadata.android.signing.release]
+# path = "/home/mv/keystore_MV_android/MV_release_key.keystore"
+# keystore_password = "password_for_me_who_is_not_mv"
 
 [[package.metadata.android.uses_feature]]
 name = "android.hardware.vulkan.level"
