--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["lib", "cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop"] } #,"build-dynamic-openxr", "force-local-deps"] }
+stereokit-macros = { path = "../StereoKit-rust/stereokit-macros"} 
 winit = { version = "0.30", features = [ "android-native-activity" ] }
 
 [target.'cfg(target_os = "android")'.dependencies]
