--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ stereokit-rust = { path = "../StereoKit-rust" , features = ["event-loop"] } # , 
 winit = { version = "0.30", features = [ "android-native-activity" ] }
 
 [target.'cfg(target_os = "android")'.dependencies]
+stereokit-rust = { path = "../StereoKit-rust" , features = ["event-loop","build-dynamic-openxr"] }
 log = "0.4"
 android_logger = "0.14"
 #android-activity = { version = "0.6", features = [ "native-activity" ] }
