--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["lib", "cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop"] } #, "force-local-deps"] }
+stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "force-local-deps"] }
 stereokit-macros = { path = "../StereoKit-rust/stereokit-macros"} 
 winit = { version = "0.30", features = [ "android-native-activity" ] }
 
@@ -43,6 +43,7 @@ max_sdk_version = 32
 # path = "/home/mv/keystore_MV_android/MV_release_key.keystore"
 # keystore_password = "password_for_me_who_is_not_mv"
 
+#---Android features common
 [[package.metadata.android.uses_feature]]
 name = "android.hardware.vulkan.level"
 required = true
@@ -51,12 +52,9 @@ required = true
 name = "android.hardware.vr.headtracking"
 required = true
 
+#---Android feature HorizonOS
 [[package.metadata.android.uses_feature]]
 name = "oculus.software.handtracking"
-required = false
-
-[[package.metadata.android.uses_feature]]
-name = "oculus.software.body_tracking"
 required = false
 
 [[package.metadata.android.uses_feature]]
@@ -68,9 +66,47 @@ name = "oculus.software.eye_tracking"
 required = false
 
 [[package.metadata.android.uses_feature]]
-name = "com.oculus.experimental.enabled"
+name = "oculus.software.overlay_keyboard"
 required = false
 
+[[package.metadata.android.uses_feature]]
+name = "oculus.software.trackedkeyboard"
+required = false
+
+[[package.metadata.android.uses_feature]]
+name = "com.oculus.software.body_tracking"
+required = false
+
+[[package.metadata.android.uses_feature]]
+name = "com.oculus.experimental.enabled"
+required = true
+
+[[package.metadata.android.uses_feature]]
+name = "com.oculus.feature.PASSTHROUGH"
+required = true
+
+[[package.metadata.android.uses_feature]]
+name = "com.oculus.feature.RENDER_MODEL"
+required = true
+
+#---Android feature AndroidXR
+[[package.metadata.android.uses_feature]]
+name = "android.software.xr.immersive"
+required = true
+
+[[package.metadata.android.uses_feature]]
+name = "android.hardware.xr.input.hand_tracking"
+required = false
+
+[[package.metadata.android.uses_feature]]
+name = "android.hardware.xr.input.controller"
+required = false
+
+[[package.metadata.android.uses_feature]]
+name = "android.hardware.xr.input.eye_tracking"
+required = false
+
+#---Android permission common
 [[package.metadata.android.uses_permission]]
 name = "android.permission.INTERNET"
 
@@ -89,6 +125,14 @@ name = "android.permission.WRITE_EXTERNAL_STORAGE"
 [[package.metadata.android.uses_permission]]
 name = "android.permission.READ_EXTERNAL_STORAGE"
 
+#[[package.metadata.android.uses_permission]]
+#name = "android.permission.READ_DEVICE_CONFIG"
+#required = true
+
+[[package.metadata.android.uses_permission]]
+name = "android.permission.MANAGE_EXTERNAL_STORAGE"
+
+#---Android permission for Horizon OS
 [[package.metadata.android.uses_permission]]
 name = "com.oculus.permission.HAND_TRACKING"
 required = false
@@ -105,6 +149,50 @@ required = false
 name = "com.oculus.permission.EYE_TRACKING"
 required = false
 
+[[package.metadata.android.uses_permission]]
+name = "com.oculus.permission.RENDER_MODEL"
+required = true
+
+[[package.metadata.android.uses_permission]]
+name = "com.oculus.permission.USE_ANCHOR_API"
+required = true
+
+[[package.metadata.android.uses_permission]]
+name = "com.oculus.permission.USE_SCENE"
+required = true
+
+[[package.metadata.android.uses_permission]]
+name = "com.oculus.permission.BOUNDARY_VISIBILITY"
+required = true
+
+[[package.metadata.android.uses_permission]]
+name = "com.oculus.permission.IMPORT_EXPORT_IOT_MAP_DATA"
+required = false
+
+[[package.metadata.android.uses_permission]]
+name = "com.oculus.permission.TRACKED_KEYBOARD"
+required = false
+
+[[package.metadata.android.uses_permission]]
+name = "com.oculus.permission.USE_COLOCATION_DISCOVERY_API"
+required = false
+
+#---Android permission AndroidXR
+[[package.metadata.android.uses_permission]]
+name = "android.permission.SCENE_UNDERSTANDING"
+required = false
+
+[[package.metadata.android.uses_permission]]
+name = "android.permission.HAND_TRACKING"
+required = false
+
+[[package.metadata.android.uses_permission]]
+name = "android.permission.EYE_TRACKING_FINE"
+required = false
+
+
+#---Android Application
+
 [package.metadata.android.application]
 debuggable = true
 label = "Stereokit-rust-template"
@@ -113,7 +201,7 @@ theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
 extract_native_libs = true
 has_code = false
 
-
+#---Horizon OS
 [[package.metadata.android.application.meta_data]]
 name = "com.oculus.handtracking.version"
 value = "V2.0"
@@ -129,6 +217,26 @@ value = "quest2|questpro|quest3"
 [[package.metadata.android.application.meta_data]]
 name = "com.oculus.intent.category.VR"
 value = "vr_only"
+
+#---Pico
+[[package.metadata.android.application.meta_data]]
+name = "pvr.app.type"
+value = "vr"
+
+[[package.metadata.android.application.meta_data]]
+name = "handtracking"
+value = "1"
+
+#---Snapdragon
+[[package.metadata.android.application.meta_data]]
+name = "spaces.version"
+value = "0.15.0"
+
+#---AndroidXR
+[[package.metadata.android.application.meta_data]]
+name = "android.window.PROPERTY_XR_ACTIVITY_START_MODE"
+value = "XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED"
+
 
 [package.metadata.android.application.activity]
 #name = ".MainActivity"
