--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ crate-type = ["lib", "cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-stereokit-rust = { path = "../StereoKit-rust" , features = ["event-loop"] } # , features = ["dynamic-openxr"] }
+stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "force-local-deps"] }
+stereokit-macros = { path = "../StereoKit-rust/stereokit-macros"} 
 winit = { version = "0.30", features = [ "android-native-activity" ] }
 
 [target.'cfg(target_os = "android")'.dependencies]
@@ -23,4 +24,3 @@ android_logger = "0.14"
 #android-activity = { version = "0.6", features = [ "native-activity" ] }
 ndk-context = "0.1.1"
 ndk = "0.9.0"
-
