AndroidManifest entries for AndroidXR and others

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,39 @@
     <uses-feature android:name="android.hardware.vulkan.level" android:required="true" />
     <uses-feature android:name="android.hardware.vr.headtracking" android:required="true" />
     <uses-feature android:name="oculus.software.handtracking" android:required="false" />
-    <uses-feature android:name="oculus.software.body_tracking" android:required="false" />
     <uses-feature android:name="oculus.software.face_tracking" android:required="false" />
     <uses-feature android:name="oculus.software.eye_tracking" android:required="false" />
-    <uses-feature android:name="com.oculus.experimental.enabled" android:required="false" />
+    <uses-feature android:name="oculus.software.overlay_keyboard" android:required="false" />
+    <uses-feature android:name="oculus.software.trackedkeyboard" android:required="false" />
+    <uses-feature android:name="com.oculus.software.body_tracking" android:required="false" />
+    <uses-feature android:name="com.oculus.experimental.enabled" android:required="true" />
     <uses-feature android:name="com.oculus.feature.PASSTHROUGH" android:required="true" />
+    <uses-feature android:name="com.oculus.feature.RENDER_MODEL" android:required="true" />
+    <uses-feature android:name="android.software.xr.immersive" android:required="true" />
+    <uses-feature android:name="android.hardware.xr.input.hand_tracking" android:required="false" />
+    <uses-feature android:name="android.hardware.xr.input.controller" android:required="false" />
+    <uses-feature android:name="android.hardware.xr.input.eye_tracking" android:required="false" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.oculus.permission.HAND_TRACKING" />
     <uses-permission android:name="com.oculus.permission.BODY_TRACKING" />
     <uses-permission android:name="com.oculus.permission.FACE_TRACKING" />
     <uses-permission android:name="com.oculus.permission.EYE_TRACKING" />
+    <uses-permission android:name="com.oculus.permission.RENDER_MODEL" />
+    <uses-permission android:name="com.oculus.permission.USE_ANCHOR_API" />
+    <uses-permission android:name="com.oculus.permission.USE_SCENE" />
+    <uses-permission android:name="com.oculus.permission.BOUNDARY_VISIBILITY" />
+    <uses-permission android:name="com.oculus.permission.IMPORT_EXPORT_IOT_MAP_DATA" />
+    <uses-permission android:name="com.oculus.permission.TRACKED_KEYBOARD" />
+    <uses-permission android:name="com.oculus.permission.USE_COLOCATION_DISCOVERY_API" />
+    <uses-permission android:name="android.permission.SCENE_UNDERSTANDING" />
+    <uses-permission android:name="android.permission.HAND_TRACKING" />
+    <uses-permission android:name="android.permission.EYE_TRACKING_FINE" />
     <application 
         android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
         android:hasCode="true" 
@@ -25,6 +44,11 @@
         <meta-data android:name="com.oculus.ossplash" android:value="true" />
         <meta-data android:name="com.oculus.supportedDevices" android:value="quest2|questpro|quest3" />
         <meta-data android:name="com.oculus.intent.category.VR" android:value="vr_only" />
+        <meta-data android:name="pvr.app.type" android:value="vr" />
+        <meta-data android:name="handtracking" android:value="1" />
+        <meta-data android:name="spaces.version" android:value="0.15.0" />
+        <meta-data android:name="android.window.PROPERTY_XR_ACTIVITY_START_MODE"
+            android:value="XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED" />
         <activity
             android:configChanges="density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
             android:launchMode="singleTask" 
