--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,8 @@ android.compileSdkVersion=33
 android.targetSdkVersion=33
 android.minSdkVersion=29
 
-# Application properties
+# Application properties (avoid space char)
+cargo.targets=arm64,x86_64
 # cargo.openxr=use-that-of-the-device
 # cargo.openxr=../my_openxr_loader
 cargo.openxr=build-dynamic-openxr
