--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "stereokit_rust_template"
-version = "0.1.0"
-edition = "2021"
+version = "0.4.0"
+edition = "2024"
 description = "My stereokit VR program"
 keywords = ["stereokit", "XR", "VR", "AR", "sys"]
 license = "MIT"
@@ -13,12 +13,14 @@ crate-type = ["lib", "cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "force-local-deps"] }
+#stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "force-local-deps"] }
+stereokit-rust = { version = "0.4.0-alpha", features= ["event-loop", "force-local-deps"] }
 winit = { version = "0.30", features = [ "android-native-activity" ] }
 
 [target.'cfg(target_os = "android")'.dependencies]
-stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "build-dynamic-openxr"]} #, "force-local-deps"] }
+#stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "build-dynamic-openxr"]} #, "force-local-deps"] }
 log = "0.4"
+stereokit-rust = { version = "0.4.0-alpha" , features = ["event-loop","build-dynamic-openxr"] }
 android_logger = "0.15"
 #android-activity = { version = "0.6", features = [ "native-activity" ] }
 ndk-context = "0.1.1"
