--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "stereokit_rust_gradle_template"
-version = "0.1.0"
-edition = "2021"
+version = "0.4.0"
+edition = "2024"
 description = "My stereokit VR program"
 keywords = ["stereokit", "XR", "VR", "AR", "sys"]
 license = "MIT"
@@ -13,10 +13,12 @@ crate-type = ["lib", "cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-stereokit-rust = { path = "../StereoKit-rust" , features = ["no-event-loop"] } # , features = ["dynamic-openxr"] }
+#stereokit-rust = { path = "../StereoKit-rust" , features = ["no-event-loop"] } 
+stereokit-rust = { version = "0.4.0-alpha", features= ["no-event-loop"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
-stereokit-rust = { path = "../StereoKit-rust" , features = ["no-event-loop","build-dynamic-openxr"] }
+#stereokit-rust = { path = "../StereoKit-rust" , features = ["no-event-loop","build-dynamic-openxr"] }
+stereokit-rust = { version = "0.4.0-alpha", features = ["no-event-loop","build-dynamic-openxr"] }
 log = "0.4"
 android_logger = "0.15"
 android-activity = { version = "0.6", features = [ "native-activity" ] }
