Testing OpenXR emulator

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
     <uses-feature android:name="com.oculus.experimental.enabled" android:required="true" />
     <uses-feature android:name="com.oculus.feature.PASSTHROUGH" android:required="true" />
     <uses-feature android:name="com.oculus.feature.RENDER_MODEL" android:required="true" />
-    <uses-feature android:name="android.software.xr.immersive" android:required="true" />
+    <uses-feature android:name="android.software.xr.api.openxr" android:required="true"
+    android:version="65536" />
     <uses-feature android:name="android.hardware.xr.input.hand_tracking" android:required="false" />
     <uses-feature android:name="android.hardware.xr.input.controller" android:required="false" />
     <uses-feature android:name="android.hardware.xr.input.eye_tracking" android:required="false" />
@@ -32,7 +33,7 @@
     <uses-permission android:name="com.oculus.permission.IMPORT_EXPORT_IOT_MAP_DATA" />
     <uses-permission android:name="com.oculus.permission.TRACKED_KEYBOARD" />
     <uses-permission android:name="com.oculus.permission.USE_COLOCATION_DISCOVERY_API" />
-    <uses-permission android:name="android.permission.SCENE_UNDERSTANDING" />
+    <uses-permission android:name="android.permission.SCENE_UNDERSTANDING_COARSE" />
     <uses-permission android:name="android.permission.HAND_TRACKING" />
     <uses-permission android:name="android.permission.EYE_TRACKING_FINE" />
     <application 
@@ -47,7 +48,7 @@
         <meta-data android:name="pvr.app.type" android:value="vr" />
         <meta-data android:name="handtracking" android:value="1" />
         <meta-data android:name="spaces.version" android:value="0.15.0" />
-        <meta-data android:name="android.window.PROPERTY_XR_ACTIVITY_START_MODE"
+        <property android:name="android.window.PROPERTY_ACTIVITY_XR_START_MODE"
             android:value="XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED" />
         <activity
             android:configChanges="density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
