--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,9 +91,14 @@ name = "com.oculus.feature.RENDER_MODEL"
 required = true
 
 #---Android feature AndroidXR
+# [[package.metadata.android.uses_feature]]
+# name = "android.software.xr.immersive"
+# required = true
+
 [[package.metadata.android.uses_feature]]
-name = "android.software.xr.immersive"
+name = "android.software.xr.api.openxr"
 required = true
+version = 0x00010000
 
 [[package.metadata.android.uses_feature]]
 name = "android.hardware.xr.input.hand_tracking"
@@ -180,7 +185,7 @@ required = false
 
 #---Android permission AndroidXR
 [[package.metadata.android.uses_permission]]
-name = "android.permission.SCENE_UNDERSTANDING"
+name = "android.permission.SCENE_UNDERSTANDING_COARSE"
 required = false
 
 [[package.metadata.android.uses_permission]]
@@ -235,7 +240,7 @@ value = "0.15.0"
 
 #---AndroidXR
 [[package.metadata.android.application.meta_data]]
-name = "android.window.PROPERTY_XR_ACTIVITY_START_MODE"
+name = "android.window.PROPERTY_ACTIVITY_XR_START_MODE"
 value = "XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED"
 
 
