--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,19 +22,19 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="com.oculus.permission.HAND_TRACKING" />
+    <uses-permission android:name="horizonos.permission.HAND_TRACKING" />
     <uses-permission android:name="com.oculus.permission.BODY_TRACKING" />
-    <uses-permission android:name="com.oculus.permission.FACE_TRACKING" />
-    <uses-permission android:name="com.oculus.permission.EYE_TRACKING" />
+    <uses-permission android:name="horizonos.permission.FACE_TRACKING" />
+    <uses-permission android:name="horizonos.permission.EYE_TRACKING" />
     <uses-permission android:name="com.oculus.permission.RENDER_MODEL" />
-    <uses-permission android:name="com.oculus.permission.USE_ANCHOR_API" />
-    <uses-permission android:name="com.oculus.permission.USE_SCENE" />
+    <uses-permission android:name="horizonos.permission.USE_ANCHOR_API" />
+    <uses-permission android:name="horizonos.permission.USE_SCENE" />
     <uses-permission android:name="com.oculus.permission.BOUNDARY_VISIBILITY" />
-    <uses-permission android:name="com.oculus.permission.IMPORT_EXPORT_IOT_MAP_DATA" />
+    <uses-permission android:name="horizonos.permission.IMPORT_EXPORT_IOT_MAP_DATA" />
     <uses-permission android:name="com.oculus.permission.TRACKED_KEYBOARD" />
     <uses-permission android:name="com.oculus.permission.USE_COLOCATION_DISCOVERY_API" />
     <uses-permission android:name="android.permission.SCENE_UNDERSTANDING_COARSE" />
-    <uses-permission android:name="android.permission.HAND_TRACKING" />
+    <!-- <uses-permission android:name="android.permission.HAND_TRACKING" /> -->
     <uses-permission android:name="android.permission.EYE_TRACKING_FINE" />
     <application 
         android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
