Fixing WiVRn distortion. Adding new features to Cargo.toml for tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ license = "MIT"
 repository = "https://github.com/mvvvv/StereoKit-gradle-template"
 readme = "README.md"
 
+[features]
+test-xr-mode = []   #---needed if you want to use stereokit-rust test macros
+
 [lib]
 crate-type = ["lib", "cdylib"]
 
