--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
     <uses-permission android:name="android.permission.SCENE_UNDERSTANDING_COARSE" />
     <!-- <uses-permission android:name="android.permission.HAND_TRACKING" /> -->
     <uses-permission android:name="android.permission.EYE_TRACKING_FINE" />
+    <uses-permission android:name="org.khronos.openxr.permission.OPENXR" />
+    <uses-permission android:name="org.khronos.openxr.permission.OPENXR_SYSTEM" />
     <application 
         android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
         android:hasCode="true" 
