--- a/Cargo.toml
+++ b/Cargo.toml
@@ -200,6 +200,15 @@ name = "android.permission.EYE_TRACKING_FINE"
 required = false
 
 
+[[package.metadata.android.uses_permission]]
+name = "org.khronos.openxr.permission.OPENXR"
+required = false
+
+
+[[package.metadata.android.uses_permission]]
+name = "org.khronos.openxr.permission.OPENXR_SYSTEM"
+required = false
+
 #---Android Application
 
 [package.metadata.android.application]
