--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,31 @@
     <uses-feature android:name="com.oculus.software.body_tracking" android:required="false" />
     <uses-feature android:name="com.oculus.experimental.enabled" android:required="true" />
     <uses-feature android:name="com.oculus.feature.PASSTHROUGH" android:required="true" />
-    <uses-feature android:name="com.oculus.feature.RENDER_MODEL" android:required="true" />
-    <uses-feature android:name="android.software.xr.api.openxr" android:required="true" android:version="65536" />
+    <uses-feature android:name="com.oculus.feature.RENDER_MODEL" android:required="false" />
+
+    <uses-feature android:name="android.software.xr.api.openxr" android:required="true"
+        android:version="65536" />
     <uses-feature android:name="android.hardware.xr.input.hand_tracking" android:required="false" />
     <uses-feature android:name="android.hardware.xr.input.controller" android:required="false" />
     <uses-feature android:name="android.hardware.xr.input.eye_tracking" android:required="false" />
+
+    <uses-feature android:name="wave.feature.handtracking" android:required="false" />
+    <uses-feature android:name="wave.feature.tracker" android:required="false" />
+
+    <uses-permission android:name="org.khronos.openxr.permission.OPENXR" />
+    <uses-permission android:name="org.khronos.openxr.permission.OPENXR_SYSTEM" />
+    <queries>
+        <provider
+            android:authorities="org.khronos.openxr.runtime_broker;org.khronos.openxr.system_runtime_broker"
+            android:name="org.khronos.openxr" />
+        <intent>
+            <action android:name="org.khronos.openxr.OpenXRRuntimeService" />
+        </intent>
+        <intent>
+            <action android:name="org.khronos.openxr.OpenXRApiLayerService" />
+        </intent>
+    </queries>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
@@ -21,6 +41,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
     <uses-permission android:name="horizonos.permission.HAND_TRACKING" />
     <uses-permission android:name="com.oculus.permission.BODY_TRACKING" />
     <uses-permission android:name="horizonos.permission.FACE_TRACKING" />
@@ -32,14 +53,21 @@
     <uses-permission android:name="horizonos.permission.IMPORT_EXPORT_IOT_MAP_DATA" />
     <uses-permission android:name="com.oculus.permission.TRACKED_KEYBOARD" />
     <uses-permission android:name="com.oculus.permission.USE_COLOCATION_DISCOVERY_API" />
+
     <uses-permission android:name="android.permission.SCENE_UNDERSTANDING_COARSE" />
-    <!-- <uses-permission android:name="android.permission.HAND_TRACKING" /> -->
     <uses-permission android:name="android.permission.EYE_TRACKING_FINE" />
-    <uses-permission android:name="org.khronos.openxr.permission.OPENXR" />
-    <uses-permission android:name="org.khronos.openxr.permission.OPENXR_SYSTEM" />
-    <application 
+
+    <uses-permission android:name="com.qualcomm.qti.qxr.QXRServiceClientPermission" />
+    <queries>
+        <package android:name="com.qualcomm.qti.spaces.services" />
+        <package android:name="com.qualcomm.qti.openxrruntime" />
+        <intent>
+            <action android:name="com.qualcomm.qti.openxr.spaces.intent.action.BIND" />
+        </intent>
+    </queries>
+    <application
         android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
-        android:hasCode="true" 
+        android:hasCode="true"
         android:icon="@mipmap/app_icon"
         android:label="${appName}">
         <meta-data android:name="com.oculus.handtracking.version" android:value="V2.0" />
@@ -53,9 +81,9 @@
             android:value="XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED" />
         <activity
             android:configChanges="density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
-            android:launchMode="singleTask" 
-            android:name="${mainEntry}" 
-            android:exported = "true"
+            android:launchMode="singleTask"
+            android:name="${mainEntry}"
+            android:exported="true"
             android:screenOrientation="landscape" android:resizeableActivity="false">
             <meta-data android:name="com.oculus.vr.focusaware" android:value="true" />
             <meta-data android:name="android.app.lib_name" android:value="${libName}" />
