AndroidManifest.xml for all

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,7 +91,7 @@ required = true
 
 [[package.metadata.android.uses_feature]]
 name = "com.oculus.feature.RENDER_MODEL"
-required = true
+required = false
 
 #---Android feature AndroidXR
 # [[package.metadata.android.uses_feature]]
@@ -115,7 +115,24 @@ required = false
 name = "android.hardware.xr.input.eye_tracking"
 required = false
 
+#---Android feature Vive
+[[package.metadata.android.uses_feature]]
+name = "wave.feature.handtracking"
+required = false
+
+[[package.metadata.android.uses_feature]]
+name = "wave.feature.tracker"
+required = false
+
 #---Android permission common
+[[package.metadata.android.uses_permission]]
+name = "org.khronos.openxr.permission.OPENXR"
+required = false
+
+[[package.metadata.android.uses_permission]]
+name = "org.khronos.openxr.permission.OPENXR_SYSTEM"
+required = false
+
 [[package.metadata.android.uses_permission]]
 name = "android.permission.INTERNET"
 
@@ -141,7 +158,7 @@ name = "android.permission.READ_EXTERNAL_STORAGE"
 [[package.metadata.android.uses_permission]]
 name = "android.permission.MANAGE_EXTERNAL_STORAGE"
 
-#---Android permission for Horizon OS
+#---Android permission HorizonOS
 [[package.metadata.android.uses_permission]]
 name = "horizonos.permission.HAND_TRACKING"
 required = false
@@ -160,7 +177,7 @@ required = false
 
 [[package.metadata.android.uses_permission]]
 name = "com.oculus.permission.RENDER_MODEL"
-required = true
+required = false
 
 [[package.metadata.android.uses_permission]]
 name = "horizonos.permission.USE_ANCHOR_API"
@@ -186,6 +203,32 @@ required = false
 name = "com.oculus.permission.USE_COLOCATION_DISCOVERY_API"
 required = false
 
+#---Queries Snapdragons
+[[package.metadata.android.queries.package]]
+name = "com.qualcomm.qti.spaces.services"
+
+[[package.metadata.android.queries.package]]
+name = "com.qualcomm.qti.openxrruntime"
+
+[[package.metadata.android.queries.intent]]
+actions = ["com.qualcomm.qti.openxr.spaces.intent.action.BIND"]
+
+#--- Vive permissions
+[[package.metadata.android.uses_permission]]
+name = "com.qualcomm.qti.qxr.QXRServiceClientPermission"
+required = false
+
+#---Queries common
+[[package.metadata.android.queries.provider]]
+authorities = "org.khronos.openxr.runtime_broker;org.khronos.openxr.system_runtime_broker"
+name = "org.khronos.openxr"
+
+[[package.metadata.android.queries.intent]]
+actions = ["org.khronos.openxr.OpenXRRuntimeService"]
+
+[[package.metadata.android.queries.intent]]
+actions = ["org.khronos.openxr.OpenXRApiLayerService"]
+
 #---Android permission AndroidXR
 [[package.metadata.android.uses_permission]]
 name = "android.permission.SCENE_UNDERSTANDING_COARSE"
@@ -199,15 +242,10 @@ required = false
 name = "android.permission.EYE_TRACKING_FINE"
 required = false
 
-
-[[package.metadata.android.uses_permission]]
-name = "org.khronos.openxr.permission.OPENXR"
-required = false
-
-
-[[package.metadata.android.uses_permission]]
-name = "org.khronos.openxr.permission.OPENXR_SYSTEM"
-required = false
+#---AndroidXR TODO WHICH ONE IS ACTUALLY NEEDED?
+[[package.metadata.android.application.meta_data]]
+name = "android.window.PROPERTY_ACTIVITY_XR_START_MODE"
+value = "XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED"
 
 #---Android Application
 
