--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
     <uses-feature android:name="com.oculus.feature.PASSTHROUGH" android:required="true" />
     <uses-feature android:name="com.oculus.feature.RENDER_MODEL" android:required="false" />
 
-    <uses-feature android:name="android.software.xr.api.openxr" android:required="true"
-        android:version="65536" />
+    <uses-feature android:name="android.software.xr.api.openxr" android:required="true" />
     <uses-feature android:name="android.hardware.xr.input.hand_tracking" android:required="false" />
     <uses-feature android:name="android.hardware.xr.input.controller" android:required="false" />
     <uses-feature android:name="android.hardware.xr.input.eye_tracking" android:required="false" />
@@ -74,11 +73,18 @@
         <meta-data android:name="com.oculus.ossplash" android:value="true" />
         <meta-data android:name="com.oculus.supportedDevices" android:value="quest2|questpro|quest3" />
         <meta-data android:name="com.oculus.intent.category.VR" android:value="vr_only" />
+        <uses-native-library android:name="libopenxr.google.so" android:required="false" />
+
         <meta-data android:name="pvr.app.type" android:value="vr" />
         <meta-data android:name="handtracking" android:value="1" />
+
         <meta-data android:name="spaces.version" android:value="0.15.0" />
-        <property android:name="android.window.PROPERTY_ACTIVITY_XR_START_MODE"
+
+        <property android:name="android.window.PROPERTY_XR_ACTIVITY_START_MODE"
             android:value="XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED" />
+        <property
+            android:name="android.window.PROPERTY_XR_BOUNDARY_TYPE_RECOMMENDED"
+            android:value="XR_BOUNDARY_TYPE_LARGE" />
         <activity
             android:configChanges="density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
             android:launchMode="singleTask"
@@ -89,6 +95,7 @@
             <meta-data android:name="android.app.lib_name" android:value="${libName}" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="org.khronos.openxr.intent.category.IMMERSIVE_HMD" />
                 <category android:name="com.oculus.intent.category.VR" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
